--- a/teste.html
+++ b/teste.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Apresentação.</title>
+</head>
 <body>
 
-<h2>HTML Forms</h2>
+<h1> Olá mundo!</h1>
+<p> Meu nome é Raiany Fernanda Fiorese.</p>
+<p> Tenho 17 anos.</p>
+<p> E essa é minha segunda vez programando html !</p>
 
-<form action="/teste.html">
-  <label for="fname">Primeiro nome:</label><br>
-  <input type="text" id="fname" name="fname" value="Raiany"><br>
-  <label for="lname">Sobrenome:</label><br>
-  <input type="text" id="lname" name="lname" value="Fiorese"><br><br>
-  <input type="submit" value="Confirmar">
-</form> 
-
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
 </body>
 </html>
